[package]
name = "http_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
hyper = { version = "0.14.0", features = ["full"] }
hyper-tls = "0.5.0"
tokio = { version = "1.21.0", features = ["rt-multi-thread", "macros"] }
